  Roman V. Prikhodchenko).
- New fillbetween plugin that can compute a bottom for a series from
  another series, useful for filling areas between lines (see new
  example percentiles.html for a use case).
- More predictable handling of gaps for the stacking plugin, now all
  undefined ranges are skipped.
- Stacking plugin can stack horizontal bar charts.


Bug fixes:

- Fixed problem with findNearbyItem and bars on top of each other
  (reported by ragingchikn, issue 242).
- Fixed problem with ticks and the border (based on patch from
  ultimatehustler69, issue 236).
- Fixed problem with plugins adding options to the series objects.
- Fixed a problem introduced in 0.6 with specifying a gradient with {
  brightness: x, opacity: y }.

Flot 0.6
--------

API changes:

1. Selection support has been moved to a plugin. Thus if you're
passing selection: { mode: something }, you MUST include the file
jquery.flot.selection.js after jquery.flot.js. This reduces the size
of base Flot and makes it easier to customize the selection as well as
improving code clarity. The change is based on a patch from andershol.

2. In the global options specified in the $.plot command,
"lines", "points", "bars" and "shadowSize" have been moved to a
sub-object called "series", i.e.

  $.plot(placeholder, data, { lines: { show: true }})

should be changed to

  $.plot(placeholder, data, { series: { lines: { show: true }}})

All future series-specific options will go into this sub-object to
simplify plugin writing. Backward-compatibility code is in place, so
old code should not break.

3. "plothover" no longer provides the original data point, but instead
a normalized one, since there may be no corresponding original point.

4. Due to a bug in previous versions of jQuery, you now need at least
jQuery 1.2.6. But if you can, try jQuery 1.3.2 as it got some
improvements in event handling speed.


Changes:

- Added support for disabling interactivity for specific data series